# light-inference-machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: conv_layer.h  layer.h  net.h  net_layer_node.h  relu_layer.h  shape.h  tensor.h
src/: Convolution.cc  main.cc
