
PROJECT ( light-inference-machine )

SET( PROJECT_VERSION_MAJOR 0 )
SET( PROJECT_VERSION_MINOR 0.1 )

SET ( CMAKE_BUILD_TYPE <Debug|Release> )
SET ( CMAKE_VERBOSE_MAKEFILE <true|false> )

SET ( OUTPUT_ELF
        "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out")
SET ( SRC_FILES main.cc )

#Debug Flag
SET ( CMAKE_C_FLAGS_DEBUG "-DDEBUG" )

#Release FLAG
SET ( CMAKE_C_FLAGS_RELEASE "-DRELEASE -O3" )


ADD_EXECUTABLE( ${OUTPUT_ELF} ${SRC_FILES} )
